fix ff scrollbar backgroundcolor

--- a/src/scss/scrollbars.scss
+++ b/src/scss/scrollbars.scss
@@ -34,6 +34,6 @@
   background: $bs-blue;
 }
 * {
-  scrollbar-color: $bs-blue $bs-blue;
+  scrollbar-color: $bs-blue transparent;
   scrollbar-width: 5px;
 }
